# trimesh

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Case1.cpp
src/: CMakeLists.txt  Delaunay.cpp  Delaunay.hpp  Mesh.cpp  Mesh.hpp  PlotUtils.cpp  PlotUtils.hpp
tests/: CMakeLists.txt  Test1.cpp  TestDelaunay.cpp  TestMesh.cpp  TestMeshGeneration.cpp  TestPlotUtils.cpp
